--- a/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
@@ -5,6 +5,6 @@
     android:id="@+id/gameViewLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="yourowngame.com.yourowngame.Activities.GameViewActivity">
+    tools:context="yourowngame.com.yourowngame.activities.GameViewActivity">
 
 </android.widget.RelativeLayout>
