--- a/YourOwnGame/app/src/main/res/layout/activity_main.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:layout_margin="0dp"
     android:padding="0dp"
-    tools:context="yourowngame.com.yourowngame.Activities.MainActivity">
+    tools:context="yourowngame.com.yourowngame.activities.MainActivity">
 
     <Button
         android:id="@+id/startGame"
