--- a/YourOwnGame/app/src/main/res/layout/activity_loading.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_loading.xml
@@ -7,14 +7,37 @@
     android:background="@color/colorPrimaryDark"
     tools:context="yourowngame.com.yourowngame.activities.LoadingActivity">
 
+    <ImageView
+        android:id="@+id/appIcon"
+        android:layout_margin="5dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/appicon_testingpurpose"
+        android:contentDescription="@string/loadingActivity_imageView_contentDescription"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:scaleX="0.85"
+        android:scaleY="0.85"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="15dp"
+        android:layout_centerVertical="true"
+        android:layout_height="wrap_content">
     <TextView
-        android:textColor="@color/colorWhite"
-        android:textSize="35sp"
-        android:layout_centerHorizontal="true"
         android:id="@+id/appName"
-        android:text="@string/app_name"
+        style="@style/defaultBigHeading"
+        android:text="@string/appName"
+        android:layout_margin="5dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -22,34 +45,16 @@
     <TextView
         android:id="@+id/versionName"
         android:text="@string/versionName"
-        android:textSize="20sp"
-        android:layout_below="@+id/appName"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/colorWhite"
+        style="@style/defaultHeading"
         android:layout_marginBottom="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <ImageView
-        android:id="@+id/appIcon"
-        android:src="@drawable/appicon_testingpurpose"
-        android:contentDescription="@string/loadingActivity_imageView_contentDescription"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:scaleX="0.85"
-        android:scaleY="0.85"
-        android:layout_marginBottom="15dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/versionName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <ProgressBar
         android:layout_marginTop="20dp"
-        android:layout_below="@+id/appIcon"
-        android:textSize="15sp"
         android:indeterminate="true"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    </LinearLayout>
 </RelativeLayout>
