--- a/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/gameViewLayout"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="yourowngame.com.yourowngame.activities.GameViewActivity">
+    android:background="@color/colorPrimaryDark"
+    android:id="@+id/gameViewLayout">
 
-</android.widget.RelativeLayout>
+</FrameLayout>
