--- a/YourOwnGame/app/src/main/res/values/colors.xml
+++ b/YourOwnGame/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="black_overlay">#66000000</color>
+
+    <!-- For Background: GameView -->
+    <color name="colorSkyBlue">#0088ff</color>
 </resources>
