--- a/YourOwnGame/app/src/main/res/values/styles.xml
+++ b/YourOwnGame/app/src/main/res/values/styles.xml
@@ -21,7 +21,11 @@
     </style>
 
     <!-- LoadingScreen -->
-    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="SplashTheme" parent="Theme.AppCompat.Light">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@drawable/loadingscreen</item>
     </style>
 
