--- a/YourOwnGame/app/src/main/res/layout/activity_main.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_main.xml
@@ -13,22 +13,12 @@
 
     <Button
         android:id="@+id/startGame"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="5dp"
-        android:text="@string/mainActivity_button_startGame" />
-
-    <ImageView
-        android:contentDescription="@string/mainActivity_imageView_contentDescription"
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/splash" />
+        android:padding="20dp"
+        android:text="@string/mainActivity_button_startGame" />
 
 </android.widget.RelativeLayout>
