--- a/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/gameViewLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
-    android:id="@+id/gameViewLayout">
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_centerVertical="true"
+    android:background="@color/colorPrimaryDark">
+
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/shoot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Shoot" />
+        android:text="@string/Shoot" />
+
 </FrameLayout>
