--- a/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
@@ -11,10 +11,15 @@
     android:background="@color/colorPrimaryDark">
 
 
+    <!-- TODO: Button is not visible [presumably behind bg]  -->
     <Button
         android:id="@+id/shoot"
+        android:onClick="onShootBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorWhite"
+        android:background="@color/colorAccent"
+        android:padding="5dp"
         android:text="@string/Shoot" />
 
 </FrameLayout>
