kill enemies, highscore

--- a/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
@@ -12,14 +12,15 @@
 
 
     <!-- TODO: Button is not visible [presumably behind bg]  -->
+
     <Button
         android:id="@+id/shoot"
-        android:onClick="onShootBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorWhite"
         android:background="@color/colorAccent"
+        android:onClick="onShootBtn"
         android:padding="5dp"
-        android:text="@string/Shoot" />
+        android:text="@string/Shoot"
+        android:textColor="@color/colorWhite" />
 
 </FrameLayout>
