--- a/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
@@ -11,6 +11,11 @@
     android:background="@color/colorPrimaryDark">
 
 
+    <yourowngame.com.yourowngame.gameEngine.GameView
+        android:id="@+id/gameView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <!-- TODO: Button is not visible [presumably behind bg]  -->
 
     <Button
