--- a/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
@@ -28,4 +28,19 @@
         android:text="@string/Shoot"
         android:textColor="@color/colorWhite" />
 
+    <TextView
+        android:id="@+id/highscoreLbl"
+        android:text="@string/gameActivity_highscore_lbl"
+        android:textSize="20sp"
+        android:layout_gravity="top|end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/highscoreVal"
+        android:textSize="20sp"
+        android:layout_gravity="top|end"
+        android:text="@string/gameActivity_highscore_val"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </FrameLayout>
