--- a/YourOwnGame/app/src/main/res/layout/activity_main.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_main.xml
@@ -24,15 +24,21 @@
 
     <Button
         android:id="@+id/settings"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/startGame"
-        android:layout_alignBottom="@+id/startGame"
-        android:layout_marginLeft="134dp"
-        android:layout_marginStart="134dp"
-        android:layout_toEndOf="@+id/startGame"
-        android:layout_toRightOf="@+id/startGame"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:padding="20dp"
         android:text="@string/setting" />
+
+    <Button
+        android:id="@+id/highscoreBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:padding="20dp"
+        android:text="Your Score" />
 
 </android.widget.RelativeLayout>
