--- a/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
@@ -12,32 +12,26 @@
     android:background="@color/colorPrimaryDark">
 
 
-    <yourowngame.com.yourowngame.gameEngine.GameView
-        android:id="@+id/gameView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <!-- TODO: Button is not visible [presumably behind bg]  -->
-
     <Button
         android:id="@+id/shoot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:alpha="0.1"
         android:background="@color/colorAccent"
         android:onClick="onShootBtn"
         android:padding="5dp"
         android:text="@string/Shoot"
         android:textColor="@color/colorWhite" />
 
-    <TextView
-        android:id="@+id/highscoreLbl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|end"
-        android:layout_marginRight="150dp"
-        android:text="@string/gameActivity_highscore_lbl"
-        android:textSize="20sp"
-        android:visibility="invisible" />
+    <yourowngame.com.yourowngame.gameEngine.GameView
+        android:id="@+id/gameView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <!-- TODO: Button is not visible [presumably behind bg]  -->
 
     <TextView
         android:id="@+id/highscoreVal"
@@ -50,7 +44,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/highscoreCoins"
@@ -61,12 +55,12 @@
             android:layout_alignParentRight="true"
             android:layout_marginEnd="49dp"
             android:layout_marginRight="49dp"
-            android:text="250"
+            android:text="0"
             android:textSize="20sp" />
 
         <ImageView
             android:id="@+id/pointsLbl"
-            android:layout_width="16dp"
+            android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
@@ -77,12 +71,13 @@
 
         <ImageView
             android:id="@+id/coinsLbl"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_alignLeft="@+id/pointsLbl"
             android:layout_alignStart="@+id/pointsLbl"
             android:layout_below="@+id/pointsLbl"
             app:srcCompat="@drawable/goldicon" />
+
     </RelativeLayout>
 
 </FrameLayout>
