--- a/YourOwnGame/app/src/main/res/layout/activity_main.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
 
     <Button
         android:id="@+id/startGame"
+        android:onClick="startGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -33,12 +34,13 @@
 
     <Button
         android:id="@+id/highscoreBtn"
+        android:onClick="showHighscore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:padding="20dp"
-        android:text="Your Score" />
+        android:text="Highscore" />
 
 </android.widget.RelativeLayout>
