--- a/YourOwnGame/app/src/main/res/values/styles.xml
+++ b/YourOwnGame/app/src/main/res/values/styles.xml
@@ -34,14 +34,25 @@
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textSize">14sp</item>
     </style>
+
     <style name="defaultHeading" parent="defaultText">
         <item name="android:textSize">22sp</item>
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:layout_gravity">center_horizontal</item>
     </style>
+
     <style name="defaultBigHeading" parent="defaultHeading">
         <item name="android:textSize">35sp</item>
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
