--- a/YourOwnGame/app/src/main/res/values/colors.xml
+++ b/YourOwnGame/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
 
     <!-- For Background: GameView -->
     <color name="colorSkyBlue">#0088ff</color>
+
+    <!-- Special colors (e.g. for Bgs) -->
+    <color name="colorShadow">#A8A8A8</color>
+    <color name="colorBlack">#111</color>
 </resources>
