--- a/YourOwnGame/app/src/main/res/values/styles.xml
+++ b/YourOwnGame/app/src/main/res/values/styles.xml
@@ -56,6 +56,18 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!-- TEXT FORMATTING ################################################ -->
+    <style name="heading_1">
+        <item name="android:textSize">25sp</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+
+
     <!-- BUTTONS ######################################################## -->
     <style name="menu_btn">
         <item name="android:textColor">@color/colorWhite</item>
