--- a/YourOwnGame/app/src/main/res/layout/activity_main.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_main.xml
@@ -2,43 +2,52 @@
 
 <!-- TOP Layout MUST be a Relativelayout (every activity where we want to display a banner) -->
 <android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainActivity_RL"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBlack"
-    tools:context="yourowngame.com.yourowngame.activities.MainActivity">
-
-
-
+    android:addStatesFromChildren="true"
+    android:background="@color/thegame_grey">
     <LinearLayout
         android:id="@+id/btnList"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="545dp"
+        android:layout_height="197dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_vertical|center"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/btnStartGame"
-            style="@style/menu_btn"
+            style="@style/menu_btn_white"
+            android:layout_width="500dp"
             android:layout_marginTop="15dp"
             android:onClick="startGame"
             android:text="@string/mainActivity_button_startGame" />
 
         <Button
             android:id="@+id/btnHighscore"
-            style="@style/menu_btn"
+            style="@style/menu_btn_white"
+            android:layout_width="500dp"
             android:layout_marginTop="15dp"
             android:onClick="showHighscore"
             android:text="@string/mainActivity_button_highscores" />
 
         <Button
             android:id="@+id/btnSettings"
-            style="@style/menu_btn"
+            style="@style/menu_btn_white"
+            android:layout_width="500dp"
             android:layout_marginTop="15dp"
             android:text="@string/mainActivity_button_settings" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/thegameendend" />
 
 </android.widget.RelativeLayout>
