--- a/YourOwnGame/app/src/main/res/values/colors.xml
+++ b/YourOwnGame/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorWhite">#eee</color>
+    <color name="colorWhite">#eeeeee</color>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
@@ -12,5 +12,6 @@
 
     <!-- Special colors (e.g. for Bgs) -->
     <color name="colorShadow">#A8A8A8</color>
-    <color name="colorBlack">#111</color>
+    <color name="colorBlack">#111111</color>
+    <color name="thegame_grey">#5b5b5b</color>
 </resources>
