--- a/YourOwnGame/app/src/main/res/layout/activity_highscore.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_highscore.xml
@@ -17,7 +17,7 @@
         tools:context=".activities.HighscoreActivity">
 
         <LinearLayout
-            android:id="@+id/highscoreList"
+            android:id="@+id/highscoreActivity_highscoreList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
