added paid/free version functionality, reenabled ads, ads now automatically configured whether test or real ads should be shown

--- a/YourOwnGame/app/src/main/res/layout/activity_highscore.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_highscore.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/colorBlack"
+    android:id="@+id/highscoreActivity_RL"
     android:layout_height="wrap_content">
 
     <TextView
