smallest change ever, but have to go

--- a/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
@@ -17,29 +17,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/gameViewActivity_highscoreVal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|end"
-        android:layout_marginRight="50dp"
-        android:text="@string/gameActivity_highscore_val"
-        android:textSize="20sp" />
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/gameViewActivity_pointsLbl"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="146dp"
-            android:layout_marginRight="146dp"
+            android:layout_marginEnd="131dp"
             app:srcCompat="@drawable/points" />
+
+        <TextView
+            android:id="@+id/gameViewActivity_highscoreVal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="top|end"
+            android:layout_marginEnd="12dp"
+            android:layout_marginTop="18dp"
+            android:text="@string/gameActivity_highscore_val"
+            android:textSize="20sp" />
 
     </RelativeLayout>
 
