--- a/YourOwnGame/app/src/main/res/layout/activity_level_hierarchy.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_level_hierarchy.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="yourowngame.com.yourowngame.activities.LevelHierarchyActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.GridLayout
+        android:id="@+id/glLevelHierarchy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:orientation="horizontal"
+        app:columnCount="4"/>
+
+</ScrollView>
