--- a/YourOwnGame/app/src/main/res/layout/activity_level_hierarchy.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_level_hierarchy.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="yourowngame.com.yourowngame.activities.LevelHierarchyActivity">
+    tools:context="yourowngame.com.yourowngame.activities.LevelHierarchyActivity"
+    android:background="@color/colorPrimaryDark">
 
     <android.support.v7.widget.GridLayout
         android:id="@+id/glLevelHierarchy"
