--- a/YourOwnGame/app/src/main/res/drawable/btn_menu_white.xml
+++ b/YourOwnGame/app/src/main/res/drawable/btn_menu_white.xml
@@ -4,7 +4,7 @@
         android:radius="14dp"
         />
     <solid
-        android:color="#4D4D4D"
+        android:color="#033550"
         />
     <padding
         android:left="0dp"
@@ -18,6 +18,6 @@
         />
     <stroke
         android:width="2dp"
-        android:color="#FFFFFF"
+        android:color="#1f2223"
         />
 </shape>
