--- a/YourOwnGame/app/src/main/res/layout/activity_main.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:addStatesFromChildren="true"
-    android:background="@drawable/background_1920_1080">
+    android:background="@drawable/mainframe">
 
     <!-- AppVersion will be determined by onCreate() -->
     <TextView
@@ -23,12 +23,24 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp" />
 
+    <Button
+        android:id="@+id/mainActivity_btnSettings"
+        style="@style/menu_btn_white"
+        android:layout_width="170dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="7dp"
+        android:layout_marginStart="12dp"
+        android:text="@string/mainActivity_button_settings"
+        android:visibility="gone" />
+
     <LinearLayout
         android:id="@+id/mainActivity_btnList"
         android:layout_width="389dp"
-        android:layout_height="114dp"
+        android:layout_height="70dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/mainActivity_appVersion"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="46dp"
         android:gravity="center_vertical|center"
         android:orientation="horizontal">
 
@@ -50,13 +62,6 @@
 
 
         <!-- hide until we have settings to set (when we have, then just remove visibility attribute) -->
-        <Button
-            android:id="@+id/mainActivity_btnSettings"
-            style="@style/menu_btn_white"
-            android:layout_width="180dp"
-            android:layout_marginTop="15dp"
-            android:text="@string/mainActivity_button_settings"
-            android:visibility="gone" />
     </LinearLayout>
 
 </android.widget.RelativeLayout>
