--- a/YourOwnGame/app/src/main/res/layout/level_finish_dialog.xml
+++ b/YourOwnGame/app/src/main/res/layout/level_finish_dialog.xml
@@ -17,11 +17,11 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="246dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="143dp"
-        android:layout_marginLeft="50dp">
+        android:layout_height="308dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="116dp"
+        android:padding="20dp">
 
         <TableRow
             android:layout_width="match_parent"
