--- a/YourOwnGame/app/src/main/res/layout/activity_main.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
         android:id="@+id/mainActivity_btnList"
         android:layout_width="389dp"
         android:layout_height="70dp"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="46dp"
@@ -59,9 +60,6 @@
             android:layout_marginTop="15dp"
             android:onClick="showHighscore"
             android:text="@string/mainActivity_button_highscores" />
-
-
-        <!-- hide until we have settings to set (when we have, then just remove visibility attribute) -->
     </LinearLayout>
 
 </android.widget.RelativeLayout>
