--- a/YourOwnGame/app/src/main/res/layout/level_finish_dialog.xml
+++ b/YourOwnGame/app/src/main/res/layout/level_finish_dialog.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="28dp"
         android:gravity="center"
@@ -19,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="308dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="116dp"
         android:padding="20dp">
