--- a/YourOwnGame/app/src/main/res/layout/levelhierarchyactivity_level_info.xml
+++ b/YourOwnGame/app/src/main/res/layout/levelhierarchyactivity_level_info.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:id="@+id/lvlNode"
+    android:layout_gravity="center_horizontal"
+    android:layout_width="150dp"
     android:layout_height="match_parent"
+    android:layout_marginTop="30dp"
+    android:layout_marginBottom="30dp"
     android:background="@color/colorAccent">
 
     <!-- TODO: Use styles in future and make this more beautiful -->
 
     <TextView
+        android:id="@+id/lvlId"
+        android:textSize="18sp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
         android:id="@+id/lvlName"
         android:textSize="16sp"
-        android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
