--- a/YourOwnGame/app/src/main/res/layout/activity_level_hierarchy.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_level_hierarchy.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="yourowngame.com.yourowngame.activities.LevelHierarchyActivity"
-    android:background="@color/colorPrimaryDark">
+    android:background="@color/colorPrimaryDark"
+    android:id="@+id/levelHierarchyActivity_RL"
+    tools:context="yourowngame.com.yourowngame.activities.LevelHierarchyActivity">
 
-    <android.support.v7.widget.GridLayout
-        android:id="@+id/glLevelHierarchy"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:orientation="horizontal"
-        app:columnCount="1"/>
+        android:layout_height="match_parent">
 
-</ScrollView>
+        <android.support.v7.widget.GridLayout
+            android:id="@+id/glLevelHierarchy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:columnCount="1"
+            app:orientation="horizontal" />
+    </ScrollView>
+
+</RelativeLayout>
