--- a/YourOwnGame/app/src/main/res/values/colors.xml
+++ b/YourOwnGame/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
 
     <!-- Special colors (e.g. for Bgs) -->
     <color name="colorShadow">#A8A8A8</color>
+    <color name="colorDarkRed">#880000</color>
     <color name="colorBlack">#111111</color>
     <color name="thegame_grey">#5b5b5b</color>
 </resources>
