--- a/YourOwnGame/app/src/main/res/layout/activity_level_hierarchy.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_level_hierarchy.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/levelHierarchyActivity_RL"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
-    android:id="@+id/levelHierarchyActivity_RL"
+    android:background="@color/colorSkyBlue"
     tools:context="yourowngame.com.yourowngame.activities.LevelHierarchyActivity">
 
     <ScrollView
