--- a/YourOwnGame/app/src/main/res/layout/levelhierarchyactivity_level_info.xml
+++ b/YourOwnGame/app/src/main/res/layout/levelhierarchyactivity_level_info.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/lvlNode"
-    android:layout_gravity="center_horizontal"
-    android:layout_width="150dp"
+    android:layout_width="300dp"
     android:layout_height="match_parent"
-    android:layout_marginTop="30dp"
-    android:layout_marginBottom="30dp"
-    android:background="@color/colorAccent">
+    android:layout_gravity="center_horizontal"
+    android:layout_marginBottom="15dp"
+    android:layout_marginTop="15dp"
+    android:background="#ffffff">
 
     <!-- TODO: Use styles in future and make this more beautiful -->
 
     <TextView
         android:id="@+id/lvlId"
-        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/lvlName"
-        android:textSize="16sp"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textSize="16sp" />
 
     <!-- TODO: Also show how many points achieved etc. OR/AND maybe which fruits to find -->
 
