--- a/YourOwnGame/app/src/main/res/layout/levelhierarchyactivity_level_info.xml
+++ b/YourOwnGame/app/src/main/res/layout/levelhierarchyactivity_level_info.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center_horizontal"
     android:layout_marginBottom="15dp"
     android:layout_marginTop="15dp"
-    android:background="#ffffff">
+    android:background="@color/colorWhite">
 
     <!-- TODO: Use styles in future and make this more beautiful -->
 
@@ -15,6 +15,8 @@
         android:id="@+id/lvlId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textSize="18sp" />
@@ -25,6 +27,19 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:textSize="16sp" />
+
+    <!-- TODO: Make later custom elements and inflate them (incl. optional/obligatory assignments) -->
+    <TextView
+        android:id="@+id/lvlAssignments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_below="@id/lvlId"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:textSize="12sp"/>
 
     <!-- TODO: Also show how many points achieved etc. OR/AND maybe which fruits to find -->
 
