--- a/YourOwnGame/app/src/main/res/layout/activity_main.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_main.xml
@@ -71,8 +71,22 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginStart="196dp"
+        android:layout_marginLeft="196dp"
         android:onClick="startFruitSlider"
         android:text="Fruit Slide Test" />
+
+    <Button
+        android:id="@+id/btnShopActivity"
+        android:layout_width="146dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="196dp"
+        android:layout_marginLeft="196dp"
+        android:onClick="openShop"
+        android:text="Open Test shop" />
 
 </android.widget.RelativeLayout>
